--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header class="header">
         <h1 class="logo">Benitez Daniel</h1>
         <nav class="navbar">
-            <a href="#" class="link">about</a>
-            <a href="#" class="link">Habilidades </a>
-            <a href="#" class="link">Proyectos</a>
-            <a href="#" class="link">Contacto</a>
+            <a href="#about" class="link">about</a>
+            <a href="#skills" class="link">Habilidades </a>
+            <a href="#project" class="link">Proyectos</a>
+            <a href="#contact" class="link">Contacto</a>
         </nav>
     </header>
 
@@ -24,7 +24,7 @@
 
 
         <!-- section principal -->
-        <section class="principal">
+        <section id="about" class="principal">
             <div class="box-img">
 
                 <img id="img-port" src="../img/logo-portada.png" alt="">
@@ -38,11 +38,11 @@
                 </div>
                 <div class="botones">
                     <a href="#" class="btn">Descargar CV</a>
-                    <a href="#" class="btn">Contacto</a>
+                    <a href="#" class="btn-contact">Contacto</a>
                 </div>
                 <div class="img-svg">
-                    <a href="#"><img src="../img/SVG/whatsapp-svgrepo-com.svg" alt="whatsapp"></a>
-                    <a href="#"><img src="../img/SVG/instagram-1-svgrepo-com.svg" alt="instagram"></a>
+                    <a href="https://github.com/conitoweb" target="_blank"><img src="../img/SVG/github-142-svgrepo-com.svg" alt="github"></a>
+                    <a href="https://www.linkedin.com/in/daniel-eduardo-benitez-/" target="_blank"><img src="/img/SVG/linkedin-svgrepo-com.svg" alt="LinkInd"></a>
                 </div>
             </div>
             </section>
@@ -66,8 +66,7 @@
                         <div class="cajita">
                             <!-- img de un logo de exp -->
                             <h3>Experiencia</h3>
-                            <p>+3 Meses Freelancer <br>
-                                Front-End
+                            <p>Sin Experiencia Laboral
                             </p>
                         </div>
 
@@ -82,15 +81,17 @@
                     </div>
 
                     <div class="sm-parragrahp">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga et esse consectetur dolore,
-                            ducimus voluptas cupiditate dolores maxime tempore corrupti dicta repellat voluptatem inventore
-                            unde, non nobis aliquid id porro.</p>
+                        <p>Estudie Desarrollo Web en la Facultad Regional De San Miguel De Tucuman y me dedico a la parte del Front End, Actualmente tengo 20 Años
+                            Me encanta lo que es el mundo de la tecnologia y la programacion de sitios webs , soy una persona muy creativa en el momento de hacer mis diseños web
+                             ,ambicioso  en aprender cosas nuevas y mejorar cada dia!
+    
+                            </p>
                         </div>
 
                     </div>
                 </div>
                 </section>
-                <section class="skills-container">
+                <section id="skills" class="skills-container">
                     <div class="skills">
 
                         <h1 class="skills-titulo">📌Habilidades</h1>
@@ -103,9 +104,34 @@
                         
                     </div>
                 </section>
-                <section class="project">
-                    <h1 id="logo">Comming soon...</h1>
+                <section id="project" class="project">
+                    <h1 id="logo">Project Comming soon...</h1>
                 </section>
+              <footer id="contact" class="footer">
+                <div class="contact-container">
+                    <h3 class="contact-titulo">Contactame</h3>
+                    <div class="enlaces">
+                        <div class="email">
+                            <img src="./img/SVG/email-1572-svgrepo-com.svg" alt="">
+                            <a href="mailto:daniel29052003@correo.com?Subject=Aquí%20el%20asunto%20del%20mail" target="_blank">daniel29052003@gmail.com</a>
+                        </div>
+                        <div class="linkedin">
+                            <img src="./img/SVG/linkedin-svgrepo-com.svg" alt="">
+                            <a href="https://www.linkedin.com/in/daniel-eduardo-benitez-/" target="_blank">linkedin</a>
+                        </div>
+                    </div>
+                    <!-- navfooter -->
+                    <div class="nav-footer">
+                        <a href="#about" class="link-footer">About</a>
+                        <a href="#skills" class="link-footer">Habilidades</a>
+                        <a href="#project" class="link-footer">Proyectos</a>
+                        <a href="#contact" class="link-footer">Contacto</a>
+                    </div>
+                    <div class="copyright">
+                         <p>©copyright-Todos los Derechos reservados @daniel_benitez</p>
+                    </div>
+                </div>
+              </footer>
             </main>
 
             <script src="js/app.js"></script>
