cambios en el logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="about" class="principal">
             <div class="box-img">
 
-                <img id="img-port" src="../img/logo-portada.png" alt="">
+                <img id="img-port" src="./img/logo-portada.png" alt="">
             </div>
                 <div class="container">
 
@@ -41,8 +41,8 @@
                     <a href="#" class="btn-contact">Contacto</a>
                 </div>
                 <div class="img-svg">
-                    <a href="https://github.com/conitoweb" target="_blank"><img src="../img/SVG/github-142-svgrepo-com.svg" alt="github"></a>
-                    <a href="https://www.linkedin.com/in/daniel-eduardo-benitez-/" target="_blank"><img src="/img/SVG/linkedin-svgrepo-com.svg" alt="LinkInd"></a>
+                    <a href="https://github.com/conitoweb" target="_blank"><img src="./img/SVG/github-142-svgrepo-com.svg" alt="github"></a>
+                    <a href="https://www.linkedin.com/in/daniel-eduardo-benitez-/" target="_blank"><img src="./img/SVG/linkedin-svgrepo-com.svg" alt="LinkInd"></a>
                 </div>
             </div>
             </section>
@@ -57,7 +57,7 @@
             </div>
             <div class="container-sobremi">
 
-                <img class="img-cono" src="../img/i-am-daniel.png" alt="img">
+                <img class="img-cono" src="./img/i-am-daniel.png" alt="img">
 
                 <div class="experiencia">
 
@@ -96,10 +96,10 @@
 
                         <h1 class="skills-titulo">📌Habilidades</h1>
                         <div class="img-skills">
-                            <img src="../img/SVG/html5.svg" alt="">
-                            <img src="../img/SVG/css-3-svgrepo-com.svg" alt="">
-                            <img src="../img/SVG/javascript-svgrepo-com.svg" alt="">
-                            <img src="../img/SVG/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="">
+                            <img src="./img/SVG/html5.svg" alt="">
+                            <img src="./img/SVG/css-3-svgrepo-com.svg" alt="">
+                            <img src="./img/SVG/javascript-svgrepo-com.svg" alt="">
+                            <img src="./img/SVG/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="">
                         </div>
                         
                     </div>
