--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="cajita">
                             <!-- img de un logo de exp -->
                             <h3>Experiencia</h3>
-                            <p>Sin Experiencia Laboral
+                            <p>+3meses Freelancer
                             </p>
                         </div>
 
@@ -96,11 +96,18 @@
 
                         <h1 class="skills-titulo">📌Habilidades</h1>
                         <div class="img-skills">
-                            <img src="./img/SVG/html5.svg" alt="">
-                            <img src="./img/SVG/css-3-svgrepo-com.svg" alt="">
-                            <img src="./img/SVG/javascript-svgrepo-com.svg" alt="">
-                            <img src="./img/SVG/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="">
+                            <img class="imagenes" src="./img/SVG/html5.svg" alt="">
+                            <img class="imagenes" src="./img/SVG/css-3-svgrepo-com.svg" alt="">
+                            <img class="imagenes" src="./img/SVG/javascript-svgrepo-com.svg" alt="">
+                            <img class="imagenes" src="./img/SVG/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="">
                         </div>
+
+                        <!-- <div class="drop__container">
+                            <h3>arrastra las imagenes aqui</h3>
+                            <div class="drag__box">
+
+                            </div>
+                        </div> -->
                         
                     </div>
                 </section>
