--- a/index.html
+++ b/index.html
@@ -1,194 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel-Porfolio</title>
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <h2 class="logo">Benitez Daniel</h2>
-      <nav class="navbar">
-        <a href="#about" class="link">about</a>
-        <a href="#skills" class="link">Habilidades </a>
-        <a href="#project" class="link">Proyectos</a>
-        <a href="#contact" class="link">Contacto</a>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Daniel-Porfolio</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/mobile.css">
+</head>
 
-    <!-- main section -->
-    <main id="main">
-      <!-- section principal -->
-      <section id="about" class="principal">
-        <div class="box-img">
-          <img id="img-port" src="img/logo-portada.png" alt="" />
+<body>
+  <header class="header">
+    <h2 class="logo">Benitez Daniel
+
+    </h2>
+    <img class="menu-hamburguesa" src="./img/SVG/menu.png" alt="abrir-menu">
+    <nav class="navbar">
+      <a class="cerrar__menu" href="#">CLOSE</a>
+      <a href="#about" class="link">about</a>
+      <a href="#skills" class="link">Habilidades </a>
+      <a href="#project" class="link">Proyectos</a>
+      <a href="#contact" class="link">Contacto</a>
+
+    </nav>
+  </header>
+
+  <!-- main section -->
+  <main id="main">
+    <!-- section principal -->
+    <section id="about" class="principal">
+      <div class="box-img">
+        <img id="img-port" src="img/logo-portada.png" alt="" />
+      </div>
+      <div class="container">
+        <div class="textos">
+          <p>Hola, Soy</p>
+          <h1>Daniel Benitez</h1>
+          <h2>Front-End Dev</h2>
         </div>
-        <div class="container">
-          <div class="textos">
-            <p>Hola, Soy</p>
-            <h1>Daniel Benitez</h1>
-            <h2>Front-End Dev</h2>
-          </div>
-          <div class="botones">
-            <a href="#" class="btn">Descargar CV</a>
-            <a href="#contact" class="btn-contact">Contacto</a>
-          </div>
-          <div class="img-svg">
-            <a href="https://github.com/conitoweb" target="_blank"
-              ><img src="img/SVG/github-142-svgrepo-com.svg" alt="github"
-            /></a>
-            <a
-              href="https://www.linkedin.com/in/daniel-eduardo-benitez-/"
-              target="_blank"
-              ><img src="img/SVG/linkedin-svgrepo-com.svg" alt="LinkInd"
-            /></a>
-          </div>
+        <div class="botones">
+          <a href="#" class="btn">Descargar CV</a>
+          <a href="#contact" class="btn-contact">Contacto</a>
         </div>
-      </section>
-
-      <!-- SECTION SOBRE MI -->
-      <section class="sobre-mi">
-        <div class="sm-texto">
-          <p>un poco mas</p>
-          <h1>Acerca De Mi</h1>
+        <div class="img-svg">
+          <a href="https://github.com/conitoweb" target="_blank"><img src="img/SVG/github-142-svgrepo-com.svg"
+              alt="github" /></a>
+          <a href="https://www.linkedin.com/in/daniel-eduardo-benitez-/" target="_blank"><img
+              src="img/SVG/linkedin-svgrepo-com.svg" alt="LinkInd" /></a>
         </div>
-        <div class="container-sobremi">
-          <img class="imagen__sobremi" src="./img/i-am-daniel.png" alt="img" />
+      </div>
+    </section>
 
-          <div class="experiencia__container">
-            <div class="experiencia">
-              <div class="box__card">
-                <!-- img de un logo de exp -->
-                <h3>Experiencia</h3>
-                <p>+3 meses freelancer</p>
-              </div>
+    <!-- SECTION SOBRE MI -->
+    <section class="sobre-mi">
+      <div class="sm-texto">
+        <p>un poco mas</p>
+        <h1>Acerca De Mi</h1>
+      </div>
+      <div class="container-sobremi">
+        <img class="imagen__sobremi" src="./img/i-am-daniel.png" alt="img" />
 
-              <div class="box__card">
-                <!-- img de educacion  -->
-                <h3>Educacion</h3>
-                <p>
-                  Secundario Completo <br />
-                  Desarrollo web UTN-TUC
-                </p>
-              </div>
+        <div class="experiencia__container">
+          <div class="experiencia">
+            <div class="box__card">
+              <!-- img de un logo de exp -->
+              <h3>Experiencia</h3>
+              <p>+3 meses freelancer</p>
             </div>
 
-            <div class="experiencia__parrafo">
+            <div class="box__card">
+              <!-- img de educacion  -->
+              <h3>Educacion</h3>
               <p>
-                Estudie Desarrollo Web en la UTN .  Actualmente Me
-                dedico a la parte del FRONT-END Tengo 21 años de edad. me
-                encanta lo que hago en la creacion de sitios web y siempre me
-                gusta descubrir algo nuevo , en este mundo maravilloso de lo que
-                es la PRGRAMACION :)
+                Secundario Completo <br />
+                Desarrollo web UTN-TUC
               </p>
             </div>
           </div>
-        </div>
-      </section>
-      <section id="skills" class="skills-container">
-        <div class="skills">
-          <h1 class="skills-titulo">📌Habilidades</h1>
-        </div>
-        <div class="card__box">
-          <div class="card__container">
-            <div class="card__imagen">
-              <img
-                class="img__skill"
-                src="./img/SVG/html5.svg"
-                alt=""
-                width="100px"
-                height="100px"
-              />
-            </div>
-            <div class="card__texto">
-              <h3>HTML5</h3>
-              <p>Maquetacion web - SEO </p>
-            </div>
-          </div>
 
-          <div class="card__container">
-            <div class="card__imagen card__css">
-              <img
-                class="img__skill"
-                src="./img/SVG/css-3-svgrepo-com.svg"
-                alt=""
-                width="100px"
-                height="100px"
-              />
-            </div>
-            <div class="card__texto">
-              <h3>CSS3</h3>
-              <p>Flex-Box Grid-Layout Media Query</p>
-            </div>
-          </div>
-
-          <div class="card__container">
-            <div class="card__imagen card__javascript">
-              <img
-                class="img__skill"
-                src="./img/SVG/javaScript.svg"
-                alt=""
-                width="100px"
-                height="100px"
-              />
-            </div>
-            <div class="card__texto">
-              <h3>JavaScript</h3>
-              <p>Manejo del DOM y Eventos</p>
-            </div>
-          </div>
-
-          <div class="card__container">
-            <div class="card__imagen card__react">
-              <img
-                class="img__skill"
-                src="./img/SVG/react-javascript-js-framework-facebook-svgrepo-com.svg"
-                alt=""
-                width="100px"
-                height="100px"
-              />
-            </div>
-            <div class="card__texto">
-              <h3>React</h3>
-              <p>Componentes reutilizables y manejos de HOOKS</p>
-            </div>
+          <div class="experiencia__parrafo">
+            <p>
+              Estudie Desarrollo Web en la UTN . Actualmente Me
+              dedico a la parte del FRONT-END Tengo 21 años de edad. me
+              encanta lo que hago en la creacion de sitios web y siempre me
+              gusta descubrir algo nuevo , en este mundo maravilloso de lo que
+              es la PROGRAMACION :)
+            </p>
           </div>
         </div>
-      </section>
-      <section id="project" class="project">
-        <h1 id="logo">Project Comming soon...</h1>
-      </section>
-      <footer id="contact" class="footer">
-        <div class="contact-container">
-          <h3 class="contact-titulo">Contactame</h3>
-          <div class="enlaces">
-            <div class="email">
-              <img src="./img/SVG/email-1572-svgrepo-com.svg" alt="" />
-              <a
-                href="mailto:daniel29052003@correo.com?Subject=Aquí%20el%20asunto%20del%20mail"
-                target="_blank"
-                >daniel29052003@gmail.com</a
-              >
-            </div>
-            <div class="linkedin">
-              <img src="./img/SVG/linkedin-svgrepo-com.svg" alt="" />
-              <a
-                href="https://www.linkedin.com/in/daniel-eduardo-benitez-/"
-                target="_blank"
-                >linkedin</a
-              >
-            </div>
+      </div>
+    </section>
+    <section id="skills" class="skills-container">
+      <div class="skills">
+        <h1 class="skills-titulo">📌Habilidades</h1>
+      </div>
+      <div class="card__box">
+        <div class="card__container">
+          <div class="card__imagen">
+            <img class="img__skill" src="./img/SVG/html5.svg" alt="" width="100px" height="100px" />
           </div>
-          <div class="copyright">
-            <p>©copyright-Todos los Derechos reservados @daniel_benitez</p>
+          <div class="card__texto">
+            <h3>HTML5</h3>
+            <p>Maquetacion web - SEO </p>
           </div>
         </div>
-      </footer>
-    </main>
 
-    <script src="./js/app.js"></script>
-  </body>
+        <div class="card__container">
+          <div class="card__imagen card__css">
+            <img class="img__skill" src="./img/SVG/css-3-svgrepo-com.svg" alt="" width="100px" height="100px" />
+          </div>
+          <div class="card__texto">
+            <h3>CSS3</h3>
+            <p>Flex-Box Grid-Layout Media Query</p>
+          </div>
+        </div>
+
+        <div class="card__container">
+          <div class="card__imagen card__javascript">
+            <img class="img__skill" src="./img/SVG/javaScript.svg" alt="" width="100px" height="100px" />
+          </div>
+          <div class="card__texto">
+            <h3>JavaScript</h3>
+            <p>Manejo del DOM y Eventos</p>
+          </div>
+        </div>
+
+        <div class="card__container">
+          <div class="card__imagen card__react">
+            <img class="img__skill" src="./img/SVG/react-javascript-js-framework-facebook-svgrepo-com.svg" alt=""
+              width="100px" height="100px" />
+          </div>
+          <div class="card__texto">
+            <h3>React</h3>
+            <p>Componentes reutilizables y manejos de HOOKS</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="project" class="project">
+      <h1 id="logo">Project Comming soon...</h1>
+    </section>
+    <footer id="contact" class="footer">
+      <div class="contact-container">
+        <h3 class="contact-titulo">Contactame</h3>
+        <div class="enlaces">
+          <div class="email">
+            <img src="./img/SVG/email-1572-svgrepo-com.svg" alt="" />
+            <a href="mailto:daniel29052003@correo.com?Subject=Aquí%20el%20asunto%20del%20mail"
+              target="_blank">daniel29052003@gmail.com</a>
+          </div>
+          <div class="linkedin">
+            <img src="./img/SVG/linkedin-svgrepo-com.svg" alt="" />
+            <a href="https://www.linkedin.com/in/daniel-eduardo-benitez-/" target="_blank">linkedin</a>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>©copyright-Todos los Derechos reservados @daniel_benitez</p>
+        </div>
+      </div>
+    </footer>
+  </main>
+
+  <script src="./js/app.js"></script>
+</body>
+
 </html>
